--- a/styles/style.css
+++ b/styles/style.css
@@ -82,6 +82,7 @@ body {
     padding: 4px;
     margin-bottom: 5px;
     margin-left: 15px;
+    box-shadow: 0 0 15px 1px rgba(37, 73, 214, 0.18);
 }
 
 .form-box {
@@ -118,7 +119,7 @@ body {
 }
 
 .contact img {
-    width: 20px;
+    width: 25px;
     margin: -5px 10px;
 }
 
@@ -134,6 +135,16 @@ body {
 .copyright {
     text-align: center;
     margin-bottom: 20px;
+}
+
+.my-publications {
+}
+
+.publications img {
+    float: left;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding-right: 15px;
 }
 
 @media only screen and (max-width:900px)
